# OOP

./: report.docx
Lab_1/: CMakeLists.txt  Figure.h  Octagon.h  Square.h  Triangle.h  a.out  main.cpp  octagon.cpp  square.cpp  triangle.cpp
Lab_2/: CMakeLists.txt  main.cpp
Lab_2/Headers/: Figure.h  Octagon.h  TBinaryTree.h  TNode.h
Lab_2/Sources/: Octagon.cpp  TBinaryTree.cpp  TNode.cpp
Lab_3/: CMakeLists.txt  main.cpp
Lab_3/Headers/: Octagon.h  TBinaryTree.h  TNode.h  TSquare.h  Triangle.h
Lab_3/Sources/: Octagon.cpp  TBinaryTree.cpp  TNode.cpp  TSquare.cpp  Triangle.cpp
Lab_4/: main.cpp
Lab_4/Headers/: TBinaryTree.h  TNode.h  Triangle.h
Lab_4/Sources/: TBinaryTree.cpp  TNode.cpp
Lab_5/: CMakeLists.txt  main.cpp
Lab_5/Headers/: TBinaryTree.h  TIterator.h  TNode.h  TStack.h
Lab_5/Sources/: TBinaryTree.cpp  TNode.cpp  TSquare.cpp  TStack.cpp
Lab_6/: CMakeLists.txt  main.cpp
Lab_6/Figures/Headers/: Figure.h  Octagon.h  TSquare.h  Triangle.h
Lab_6/Figures/Sources/: Figure.cpp  Octagon.cpp  TSquare.cpp  Triangle.cpp
Lab_6/TAllocator/: TAllocationBlock.cpp
Lab_6/TBinaryTree/Headers/: TBinaryTree.h  TNode.h
Lab_6/TNTree/Headers/: TNTree.h  TNodeN.h
Lab_6/TNTree/Sources/: TNTree.cpp  TNodeN.cpp
Lab_7/: CMakeLists.txt  main.cpp
Lab_7/Figures/Headers/: Figure.h  Octagon.h  TSquare.h  Triangle.h
Lab_7/Figures/Sources/: Octagon.cpp  TSquare.cpp  Triangle.cpp
Lab_7/TAllocator/: TAllocationBlock.cpp  TAllocationBlock.h
Lab_7/TIterator/: TIterator.h
Lab_7/Trees/Templates/: TBinTree.h  TNTree.h  TNTreeInTBinTree.h  TNodeB.h  TNodeN.h
Lab_8/: CMakeLists.txt  main.cpp
Lab_8/Figures/Headers/: Figure.h  Octagon.h  TSquare.h  Triangle.h
Lab_8/Figures/Sources/: Octagon.cpp  Triangle.cpp
Lab_8/TIterator/: TIterator.h
Lab_8/TStack/: TStack.h
Lab_8/Trees/Templates/: TBinTree.h  TNodeB.h  TTree.h
Lab_9/: CMakeLists.txt  main.cpp
Lab_9/Figures/Sources/: TSquare.cpp
Lab_9/Trees/Templates/: TBinTree.h  TNTree.h  TNodeN.h
Ntree/: Ntree.c  a.out
Thread/: Application.cpp  DB.cpp  Manager.cpp  ProducerConsumer.cpp  PromiseFuture.cpp  Wallet.cpp  a.out  future.cpp  main.cpp  packagedTask.cpp  reference.cpp  thread_test.cpp  thread_test_class.cpp
testTree/: CMakeLists.txt  main.cpp  node.h  tree.h
