cmake_minimum_required(VERSION 3.0)
project(prog)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS_DEBUG "-DNDEBUG")
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB CPPS "*.cpp")
add_definitions(-Wall -O2)
add_executable(${PROJECT_NAME} ${CPPS})
target_link_libraries(${PROJECT_NAME})